<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    android:id="@+id/scrollView">


    <RelativeLayout
        android:id="@+id/relayoutInfo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backbuttonInfo"
            android:layout_width="27sp"
            android:layout_height="27sp"
            android:background="@drawable/baseline_arrow_back_black_36dp"
            android:contentDescription="@string/image" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:id="@+id/imageInfo"
            android:layout_below="@+id/backbuttonInfo"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher_round"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20sp" />

        <TextView
            android:id="@+id/nameInfoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/author_name"
            android:textColor="#000"
            android:layout_marginTop="5sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imageInfo"/>

        <TextView
            android:id="@+id/usernameInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/user_name"
            android:textColor="#000"
            android:layout_marginTop="25sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/nameInfoTxt"/>

        <TextView
            android:id="@+id/usernameInfoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/user_name"
            android:textColor="#000"
            android:layout_marginTop="5sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/usernameInfo"/>

        <TextView
            android:id="@+id/emailInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/email"
            android:textColor="#000"
            android:layout_marginTop="15sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/usernameInfoTxt"/>

        <TextView
            android:id="@+id/emailInfoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/email"
            android:textColor="#000"
            android:layout_marginTop="5sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/emailInfo"/>

        <TextView
            android:id="@+id/addressInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/address"
            android:textColor="#000"
            android:layout_marginTop="15sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/emailInfoTxt"/>

        <TextView
            android:id="@+id/addressInfoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/address"
            android:textColor="#000"
            android:layout_marginTop="5sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/addressInfo"/>

    </RelativeLayout>
    </ScrollView>

